Added get Properties API's
